--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,11 @@ nav {
   font-size: 20px;
   line-height: 1.4;
 }
+.btn.btn-info.btn-apply {
+  border-radius: 8px;
+  background-color: #ffffff;
+  font-size: 20px;
+  font-weight: 800;
+  letter-spacing: -0.5px;
+  color: #320fa8;
+}
